Hopefully fixed picture stretching on Profile page in Firefox.

--- a/client/src/pages/ProfilePage/Profile.css
+++ b/client/src/pages/ProfilePage/Profile.css
@@ -25,15 +25,13 @@
 .profile-main-info {
     display: grid;
     grid-template-columns: 20% 80%;
+    /* width: 100%; */
+    height: 40vh;
 }
 
 .profile-profile-pic {
-    width: 85%;
-    max-width: 85%;
-    min-width: 85%;
-    min-height: 400%;
-    max-height: 400%;
-    /* height: 100%; */
+    max-width: 100%;
+    max-height: 100%;
     margin: 0 auto;
     margin-top: 5%;
     border-radius: 10%;
@@ -65,8 +63,8 @@
     .profile-header {
         font-size: 1.8em;
     }
-    .profile-profile-pic {
+    /* .profile-profile-pic {
         max-height: 300%;
         min-height: 300%;
-    }
+    } */
 }
